--- a/docudude/docudude.csproj
+++ b/docudude/docudude.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Content Include="Dockerfile" CopyToPublishDirectory="always" />
+    <Content Include="transform.sh" CopyToPublishDirectory="always" />
   </ItemGroup>
 
   <ItemGroup>
