Added actual transform

--- a/docudude/appsettings.json
+++ b/docudude/appsettings.json
@@ -1,6 +1,6 @@
 {
   "s3": {
-    "AwsProfile": "my_profile",
+    "AwsProfile": "{{AWS_PROFILE}}",
     "LocalPath": "D:\\s3buck"
   },
   "Logging": {
