--- a/docudude/Properties/launchSettings.json
+++ b/docudude/Properties/launchSettings.json
@@ -23,7 +23,8 @@
       "launchUrl": "api/values",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "PDF_WHITELIST": "jdtest|jdtest2"
       }
     }
   }
