--- a/docudude/Dockerfile
+++ b/docudude/Dockerfile
@@ -5,4 +5,14 @@ COPY . /app
 
 WORKDIR /app
 
-RUN dotnet restore "docudude.csproj"
+RUN dotnet publish -c Release -o pub
+
+FROM microsoft/dotnet:2.1-aspnetcore-runtime as built
+
+WORKDIR /app
+
+COPY --from=pub /app/pub/ .
+
+EXPOSE 80
+
+ENTRYPOINT ["dotnet", "docudude.dll"]
