--- a/docudude/docudude.csproj
+++ b/docudude/docudude.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
@@ -8,7 +8,6 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Content Include="Dockerfile" CopyToPublishDirectory="always" />
-    <Content Include="built.Dockerfile" CopyToPublishDirectory="always" />
   </ItemGroup>
 
   <ItemGroup>
